--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@emotion/styled": "^11.13.5",
     "@mui/material": "^6.1.8",
     "axios": "^1.7.7",
     "react": "^18.3.1",
